--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-    <webview src="https://www.github.com/"></webview>
-    <webview src="http://www.google.com/" nodeintegration></webview>
-    <script src="static/js/test.js"></script>
-  </body>
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+</head>
+<body ng-app="mainApp">
+
+<div main-nav></div>
+<div main-body></div>
+
+<div ng-controller="mainCtl">
+</div>
+
+We are using node
+<script>document.write(process.versions.node)</script>
+,
+Chrome
+<script>document.write(process.versions.chrome)</script>
+,
+and Electron
+<script>document.write(process.versions.electron)</script>
+.
+<!--<webview src="https://www.github.com/"></webview>-->
+<!-- Bootstrap's JavaScript requires jQuery -->
+<!--<script>window.$ = window.jQuery = require('.static/js/jquery.min.js');</script>-->
+<script src="static/js/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
+<script src="static/js/bootstrap.min.js"></script>
+<script src="static/js/angular.min.js"></script>
+<script src="static/js/app.js"></script>
+</body>
 </html>
